// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormHelpText render it should render 1`] = `
.emotion-2 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.5rem;
  font-weight: 400;
}

.emotion-1 {
  box-sizing: border-box;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 0.25rem;
  min-width: 0;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  font-size: 0.875rem;
  line-height: 1.5rem;
  color: rgb(102,106,109);
}

<div
  className="emotion-2"
>
  <div
    className="emotion-1"
    display="flex"
  >
    <div
      className="emotion-0"
      color="colorTextWeak"
      fontSize="fontSize30"
    >
      child
    </div>
  </div>
</div>
`;

exports[`FormHelpText render it should render with an error icon 1`] = `
.emotion-4 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.5rem;
  font-weight: 400;
}

.emotion-3 {
  box-sizing: border-box;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 0.25rem;
  min-width: 0;
}

.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 1.5rem;
  height: 1.5rem;
  color: rgb(226,37,37);
}

.emotion-2 {
  margin: 0;
  padding: 0;
  font-size: 0.875rem;
  line-height: 1.5rem;
  color: rgb(226,37,37);
  margin-left: 0.25rem;
}

<div
  className="emotion-4"
>
  <div
    className="emotion-3"
    display="flex"
  >
    <span
      className="emotion-0 emotion-1"
      size="sizeIcon30"
    >
      <svg
        aria-hidden={true}
        aria-labelledby="1"
        height="100%"
        role="img"
        viewBox="0 0 24 24"
        width="100%"
      >
        <path
          d="M13.247 4.517l6.236 6.236a1.764 1.764 0 010 2.494l-6.236 6.236a1.764 1.764 0 01-2.494 0l-6.236-6.236a1.764 1.764 0 010-2.494l6.236-6.236a1.764 1.764 0 012.494 0zM12 14a1 1 0 100 2 1 1 0 000-2zm.01-5h-.02c-.604 0-1.073.592-.978 1.244l.428 2.238c.04.296.278.518.557.518h.006c.279 0 .516-.222.557-.518l.428-2.238c.095-.652-.367-1.237-.978-1.244z"
          fill="currentColor"
          fillRule="evenodd"
        />
      </svg>
    </span>
    <div
      className="emotion-2"
      color="colorTextError"
      fontSize="fontSize30"
    >
      child
    </div>
  </div>
</div>
`;
